Fixing z-index of exam survey dropdown

--- a/resources/assets/sass/components/survey.scss
+++ b/resources/assets/sass/components/survey.scss
@@ -75,6 +75,7 @@
         color: #1a304d;
         .survey-answer-dropdown {
           display: inline;
+          z-index: 10;
         }
       }
     }
